--- a/public/styles.css
+++ b/public/styles.css
@@ -19,7 +19,7 @@ body {
     border-radius: 16px;
     text-align: center;
     background-color: white;
-    max-width: 300px;
+    max-width: 290px;
 }
 
 .qr-code {
@@ -27,15 +27,18 @@ body {
     border-radius: 8px;
 }
 
+.hgroup {
+    padding: 0 0.8rem;
+    margin: 1.2rem 0 1.5rem 0;
+}
+
 .title {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     color: var(--dark-blue);
 }
 
 .subtitle {
     color: var(--grayish-blue);
-    padding: 0 1rem;
-    margin-bottom: 2rem;
 }
 
 .attribution {
