--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,7 @@ body {
     text-align: center;
     background-color: white;
     max-width: 290px;
+    box-shadow: 0 30px 20px 0 #0001;
 }
 
 .qr-code {
